[project]
name = "ty-extensions"
version = "0.1.0"
description = "A properly packaged fork of the official ty-extensions"
readme = "README.md"
authors = [
    { name = "InSyncWithFoo", email = "insyncwithfoo@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.10.0"]
build-backend = "uv_build"
